# Django_deep

./: .gitignore  README.md  db.sqlite3  like.sh  manage.py  pyproject.toml
.github/workflows/: ci.yml
deep/: asgi.py  settings.py  urls.py  wsgi.py
tabom/apis/v1/: article_router.py  like_router.py
tabom/apis/v1/schemas/: article_response.py  like_response.py
tabom/migrations/: 0001_initial.py  0002_like_unique_user_article.py  0003_article_like_count.py
tabom/models/: article.py
tabom/services/: article_service.py  like_service.py
tabom/tests/: test_article_service.py  test_auto_now.py  test_like_service.py
tabom/tests/apis/v1/: test_article_router.py  test_like_router.py
tabom/tests/servies/: test_article_service.py  test_like_service.py
