[tool.poetry]
name = "django_deep"
version = "0.1.0"
description = ""
authors = ["sy <phzzz@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.0"
django-ninja = "0.16.1"
black = "21.12b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]    # [](대괄호): section을 의미함
line-length = 120
